# Reverse-Index

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: diag.py  main.py
src/reverse_index/: __init__.py  benchmark.py  compression.py  inverted_index.py  preprocessing.py  search.py  storage.py
tests/: test_compression.py  test_inverted_index.py  test_preprocessing.py  test_search.py  test_storage.py
