[project]
name = "reverse-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IvanEfremovW", email = "Ivan.EfremovWM@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
reverse-index = "reverse_index:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
