[project]
name = "reverse-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IvanEfremovW", email = "Ivan.EfremovWM@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.8.1",
    "nltk>=3.9.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
reverse-index = "reverse_index:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
